@@ -1,3 +1,15 @@
+2020-04-16  Timothy Horton  <timothy_horton@apple.com>
+
+        Try to fix the macCatalyst build
+
+        * UIProcess/ios/WKActionSheetAssistant.h:
+        * UIProcess/ios/WKContentViewInteraction.h:
+        * UIProcess/ios/WKContentViewInteraction.mm:
+        (uiImageForImage):
+        (createTargetedPreview):
+        (createFallbackTargetedPreview):
+        (-[WKContentView _createTargetedContextMenuHintPreviewIfPossible]):
+
 2020-04-16  David Kilzer  <ddkilzer@apple.com>
 
         Re-land: [IPC Hardening] MachMessage::create() should use checked arithmetic
